# CRF

./: .gitignore  README.md  setup.cfg  setup.py
CRF/: crfs.py  crfs_cpu.py  sparsemax.py
CRF/PermutohedralFiltering/: PermutohedralFiltering.py  setup.py
CRF/PermutohedralFiltering/source/cpu/: HashTable.hpp  LatticeFilter.hpp
CRF/PermutohedralFiltering/source/gpu/: DeviceMemoryAllocator.h  LatticeFilter.cu  LatticeFilter_NHWC.cu  PermutohedralLatticeGPU_orig.cuh
src/: CRF.py  __init__.py  convcrf.py
src/CRF/: CRF.py  __init__.py
src/PermutohedralFiltering/: __init__.py
src/PermutohedralFiltering/source/: Devices.hpp
src/PermutohedralFiltering/source/cpu/: LatticeFilterKernel.cpp  PermutohedralLatticeCPU_orig.h
src/PermutohedralFiltering/source/gpu/: HashTable.hpp  PermutohedralLatticeGPU.cuh  PermutohedralLatticeGPU_NHWC.cuh
