[metadata]
name = clonefuse
version = 0.0.1
author = D. Khuê Lê-Huu
author_email = huudienkhue.le@gmail.com
description = Conditional Random Fields for Computer Vision
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/netw0rkf10w/CRF.git
project_urls =
    Bug Tracker = https://github.com/netw0rkf10w/CRF/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = CRF
packages = find:
python_requires = >=3.6

[options.packages.find]
where = CRF